Major code changes still in progress

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ aiofiles==0.4.0
 aiohttp==3.4.4
 asn1crypto==0.24.0
 async-timeout==3.0.0
+asyncinit==0.2.4
 attrs==18.2.0
 backcall==0.1.0
 bcrypt==3.1.4
 bleach==3.0.2
 boto3==1.9.0
 botocore==1.10.58
+cachetools==3.0.0
 certifi==2018.8.24
 cffi==1.11.5
 chardet==3.0.4
@@ -21,15 +23,20 @@ decorator==4.3.0
 defusedxml==0.5.0
 diffiehellman==0.13.3
 docutils==0.14
-eciespy==0.1.2
+eciespy==0.1.4
 entrypoints==0.2.3
 eth-hash==0.2.0
 eth-keys==0.2.0b3
 eth-typing==1.3.0
 eth-utils==1.2.1
 Faker==0.9.0
+gfshare==1.0.8
+google-api-python-client==1.7.6
+google-auth==1.6.1
+google-auth-httplib2==0.0.3
 grpcio==1.14.2
 grpcio-tools==1.14.2
+httplib2==0.12.0
 httptools==0.0.11
 humanfriendly==4.16.1
 idna==2.7
@@ -61,10 +68,12 @@ prometheus-client==0.4.1
 prompt-toolkit==1.0.15
 protobuf==3.6.1
 ptyprocess==0.6.0
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
 pycares==2.3.0
 pycparser==2.18
-pycryptodome==3.6.6
-pycryptodomex==3.6.6
+pycryptodome==3.7.2
+pycryptodomex==3.7.2
 Pygments==2.2.0
 pygogo==0.12.0
 pymongo==3.7.1
@@ -76,14 +85,16 @@ pyzmq==17.1.2
 qtconsole==4.4.2
 requests==2.19.1
 rethinkdb==2.3.0.post6
+rsa==4.0
 s3transfer==0.1.13
-sanic==0.7.0
+sanic==0.8.3
 sawtooth-sdk==1.0.5
 sawtooth-signing==1.0.5
 secp256k1==0.13.2
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
+sssa-python==0.0.2
 terminado==0.8.1
 testpath==0.4.2
 text-unidecode==1.2
@@ -92,11 +103,12 @@ toolz==0.9.0
 tornado==5.1.1
 traitlets==4.3.2
 ujson==1.35
+uritemplate==3.0.0
 urllib3==1.23
 uvloop==0.11.2
 wcwidth==0.1.7
 webencodings==0.5.1
-websockets==6.0
+websockets==5.0.1
 widgetsnbextension==3.4.2
 wrapt==1.10.11
 yarl==1.2.6
