--- a/Application/config.json
+++ b/Application/config.json
@@ -1,5 +1,19 @@
 
-{   "ROOT_KEY_INDEX": 0,
+{
+    "ENV":{
+          "PRODUCTION":{
+            "REST_API_URL": "13.234.36.204",
+            "GO_API_URL": "13.232.21.250",
+            "RETHINKDB_URL": "13.233.46.18"
+          },
+          "STAGING":{
+            "REST_API_URL": "172.28.128.4:8008",
+            "GO_API_URL": "13.232.21.250",
+            "RETHINKDB_URL": "13.233.46.18"
+
+          }
+  },
+   "ROOT_KEY_INDEX": 0,
     "SECRET_KEY": false,
     "ADMIN_MNEMONIC": false,
     "BATCHER_PRIVATE_KEY": false,
@@ -14,7 +28,7 @@
     "ADMIN_TAN_NUMBER": "ZPSYST74JB",
     "ADMIN_PANCARD": "AIAPV4496K",
     "ADMIN_PHONE_NUMBER": "9958491323",
-    "REST_API_URL": "172.28.128.4:8008",
+    "REST_API_URL": false,
     "ADMIN_ORG_NAME": "Remedium",
     "MAX_RECEIVE_SECRET": 20,
     "HOST": "0.0.0.0",
@@ -25,6 +39,7 @@
     "CONTEXT": false,
     "SIGNER": false,
     "logger": false,
+    "jinja": false,
     "API_GATEWAY_KEY": "DfyOmZ76eO9xEl23P3gkG1aUTbASCHCv9hHVSWGV",
     "API_GATEWAY": {
 
@@ -33,7 +48,7 @@
 
     "DATABASE":{
 
-            "ip": "13.233.46.185",
+            "ip": "",
             "port": 28015,
             "dbname": "remediumdb",
             "user": "remedium",
@@ -58,15 +73,7 @@
           "AWS_ACCESS_KEY": null
             },
 
-    "BLOCKCHAIN": {
-
-        "VALIDATOR_URL": "tcp://localhost:4004",
-        "REST_API_URL": "172.28.128.4:8008",
-        "DEBUG": true,
-        "KEEP_ALIVE": false
-      },
-
-    "GOAPI_URL": "172.28.128.1:8001",
+    "GOAPI_URL": false,
     "TYPE": ["ORGANIZATION", "CHILD", "USER"],
     "USERNAME_SMTP":"AKIAIXMV4BMYSA3QJUFQ",
     "PASSWORD_SMTP": "AihLkZeSL64n+BnEI4VuH9vLDjIt1sa2O5GJ0G4kV4zi",
